Initial Implementation for preview, meed to implement preview UI class sp it can handle cycle and correct ui alignements

--- a/CSS/MainUI.css
+++ b/CSS/MainUI.css
@@ -1,10 +1,7 @@
 html {
     
-    //position:fixed;
 }
 body {
-    
-    //background-color:rgb(37,37,37);
     overflow:hidden;
     width:100%;
     height:100%;
@@ -16,8 +13,6 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center; 
-    //background-color:black;
-    //min-height:200px;
     min-width: 320px;
     min-height:480px;
 }
@@ -85,7 +80,6 @@ body {
 .WagTapLogo 
 {
     background-image:url(../img/Icons/WagTapLogo.svg);
-    //background-image:url(../img/Icons/WagTap_TargetLogo.svg);
     background-size: 100% 100%;
     background-repeat:no-repeat;
 }
@@ -107,7 +101,6 @@ body {
     left:0;
     width:100%;
     height:100%;
-    //border:2px solid pink;
     overflow:hidden;
 }
 
@@ -121,7 +114,6 @@ body {
     height:5px;
     background-color:rgb(127,127,127);
     box-shadow:rgba(0,0,0,.6) 0px 4px 4px;
-    //z-index:100;
 }
 .DividerLight /*media*/
 {
@@ -131,7 +123,6 @@ body {
     height:5px;
     background-color:rgb(64,64,64);
     box-shadow:rgba(0,0,0,.6);
-    //z-index:100;
 }
 
 
@@ -363,9 +354,7 @@ body {
 
 
 .rotateToDelete
-{
-    //background-color:red;
-    //border:solid 2px red;
+{   
     transform:rotate(45deg);
     -webkit-transform:rotate(45deg); 
 }
@@ -373,7 +362,6 @@ body {
 .rotateToAdd
 {
     transform:rotate(0deg);
-    //border:solid 2px green;
 }
 
 .TopSlider 
@@ -392,7 +380,6 @@ body {
 {
     background: rgba(62,62,63,1);
     background: -moz-radial-gradient(center, ellipse cover, rgba(62,62,63,1) 0%, rgba(41,38,39,1) 35%, rgba(23,19,20,1) 100%);
-    background: -webkit-gradient(radial, center center, 0px, center center, 100%, , color-stop(0%, rgba(62,62,63,1)), color-stop(35%, rgba(41,38,39,1)), color-stop(100%, rgba(23,19,20,1)));
     background: -webkit-radial-gradient(center, ellipse cover, rgba(62,62,63,1) 0%, rgba(41,38,39,1) 35%, rgba(23,19,20,1) 100%);
     background: -o-radial-gradient(center, ellipse cover, rgba(62,62,63,1) 0%, rgba(41,38,39,1) 35%, rgba(23,19,20,1) 100%);
     background: -ms-radial-gradient(center, ellipse cover, rgba(62,62,63,1) 0%, rgba(41,38,39,1) 35%, rgba(23,19,20,1) 100%);
@@ -481,7 +468,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c7c7c7', end
 .ContentSectionLight 
 {
     position:absolute;
-    //background-color:rgb(168,168,168);
     background-color:rgb(200,200,200);
     
 }
@@ -489,7 +475,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c7c7c7', end
 {
     position:absolute;
     background-color:rgba(25,25,25,1);
-    //background-color:rgb(168,168,168);
     
 }
 
@@ -497,25 +482,21 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c7c7c7', end
 .TextColorDark 
 {
     color:rgb(250,250,250);
-    //font-family: 'Gafata', sans-serif;
 }
 
 .TextColorLight 
 {
     color:rgb(50,50,50);
-    //font-family: 'Gafata', sans-serif;
 }
 
 .AlternateTextColorDark 
 {
     color:rgb(50,50,50);
-    //font-family: 'Gafata', sans-serif;
 }
 
 .AlternateTextColorLight
 {
     color:rgb(250,250,250);
-    //font-family: 'Gafata', sans-serif;
 }
 
 
@@ -567,7 +548,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c7c7c7', end
 
 .ScreenContainer 
 {
-    //transition: left .5s;
+    
 }
 
 
@@ -619,7 +600,6 @@ textarea:focus, select:focus
     border:1px solid rgba(250,250,250,0.1);
     border-radius: 8px;
     text-align:center;
-    //background: linear-gradient(to bottom, #eeeeee 0%,#cccccc 100%);
     background-color:white;
     font-family: 'Gafata', sans-serif;
 }
@@ -704,8 +684,6 @@ textarea:focus, select:focus
     margin-top:-120px;
     left:50%;
     margin-left:-100px;
-    
-    //border:solid red 3px;
 }
 
 
@@ -724,22 +702,17 @@ textarea:focus, select:focus
     position:absolute;
     transform:translate(0,-100%);
     width:100%;
-    //border:solid red 3px;
-    //margin-left:-50%;
     padding:0 0 0 0;
     top:100%;
     text-align:center;
 }
 
 .LoadingImageLight {
-    
-    //border:solid green 3px;
     height:100%;
     width:100%;
 }
 
 .LoadingImageDark {
-    //border:solid pink 3px;
     height:100%;
     width:100%;
 }
@@ -748,14 +721,12 @@ textarea:focus, select:focus
     text-shadow: 0px 0px 20px #000;
     box-shadow:0 0 50px #000;
     font-weight:100 !important;
-    //font-size:1em !important;
 }
 
 .blurAll> span {
     text-shadow: 0px 0px 20px #000;
     box-shadow:0 0 50px #000;
     font-weight:100 !important;
-    //font-size:1em !important;
 }
 
 
@@ -775,7 +746,6 @@ input
     background-image:url(../img/Icons/ticker.png);
     width:18px;
     height:25px;
-    //z-index:1;
 }
 
 #DayTicker 
@@ -848,7 +818,6 @@ input
     height:80%;
     width:80%;
     border-radius:50%;
-    //background-color:yellow;
     box-sizing:border-box;
 }
 
@@ -975,7 +944,6 @@ input
     height:100%;
     background-color: #C2C1c1;
     position:absolute;
-    //z-index:1;
     transition: left .7s;
 }
 
